kubernetes/templates/searxng-staging-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: monodots-searxng-staging
  labels:
    app.kubernetes.io/name: searxng-staging
    app.kubernetes.io/instance: searxng-staging
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app.kubernetes.io/name: searxng-staging
    app.kubernetes.io/instance: searxng-staging
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monodots-searxng-staging
  labels:
    app.kubernetes.io/name: searxng-staging
    app.kubernetes.io/instance: searxng-staging
    app.kubernetes.io/component: web
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: searxng-staging
      app.kubernetes.io/instance: searxng-staging
  template:
    metadata:
      labels:
        app.kubernetes.io/name: searxng-staging
        app.kubernetes.io/instance: searxng-staging
        app.kubernetes.io/component: web
    spec:
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
        - "8.8.8.8"
        - "1.1.1.1"
        searches:
        - "cluster.local"
      securityContext:
        runAsNonRoot: true
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
      containers:
      - name: searxng
        image: docker.io/searxng/searxng:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        volumeMounts:
        - name: configmap-searxng-staging-settings
          mountPath: /etc/searxng/settings.yml
          subPath: settings.yml
          readOnly: true
        - name: configmap-searxng-limiter
          mountPath: /etc/searxng/limiter.toml
          subPath: limiter.toml
          readOnly: true
        - name: searxng-cache
          mountPath: /var/cache/searxng/
        startupProbe:
          httpGet:
            path: /healthz
            port: 8080
          failureThreshold: 60
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: "1"
            memory: 512Mi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
      volumes:
      - name: configmap-searxng-staging-settings
        configMap:
          name: configmap-searxng-staging-settings
      - name: configmap-searxng-limiter
        configMap:
          name: configmap-searxng-limiter
      - name: searxng-cache
        emptyDir: {}
