kubernetes/templates/ingress-rss-bridge.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rss-bridge
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-https@kubernetescrd
spec:
  tls:
  - hosts:
    - rss.lsferreira.net
    secretName: monodots-rss-bridge-tls
  rules:
  - host: rss.lsferreira.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monodots-rss-bridge
            port:
              number: 80
  ingressClassName: traefik
